<resources>
    <string name="app_name" translatable="false">MedScan</string>
    <string name="Near_to_you">"NEAR TO YOU "</string>
    <string name="text">"we help you find your opportunity and  "</string>
    <string name="text2">save your time.</string>
    <string name="login">Login</string>
    <string name="mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="textviewweb">Use other methods</string>
    <string name="signup">Don\'t have an account ?</string>
    <string name="textviewlog">Already</string>
    <string name="textviewlog2">have an</string>
    <string name="textviewlog3">account ?</string>
    <string name="password">Password</string>
    <string name="email2">Email</string>
    <string name="signupforg">Sign up</string>
    <string name="forgpass">Forgot your password?</string>
    <string name="donthave">Don\'t have an account?</string>
    <string name="button1">Patient</string>
    <string name="button2">Doctor</string>
    <string name="textview1">Do you want to be a doctor ?</string>
    <string name="textview2">Or</string>
    <string name="textview3">Are you looking for a medical tips ?</string>
    <string name="sub">Submit</string>
    <string name="textview">Please enter your data </string>
    <string name="welcome" translatable="false">"Welcome . . "</string>
    <string name="MedScan" translatable="false">MEDSCAN</string>
    <string name="feedback">Write here if you have any comments..</string>
    <string name="profile">Edit profile</string>
    <string name="recommend">Recommend</string>
    <string name="about_us">About us</string>
    <string name="feedback_menu">Feedback</string>
    <string name="other">Others</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="rate_us">Rate us</string>
    <string name="doctors">Doctors</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">310036114465229</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb310036114465229</string>
    <string name="text1_feedback">Your opinion matters to us !</string>
    <string name="text2_feedback">We work super hard to serve you better and</string>
    <string name="text3_feedback">would love to know your feedback </string>
    <string name="text4_feedback">on our app ?</string>
    <string name="submit">Submit</string>
    <string name="thanks">Thanks !\nYour opinion matters..\nWe hope we helped you.</string>
    <string name="reset">Reset your password</string>
    <string name="successful">Successful password reset !</string>
    <string name="text_password">You can now use your new password to login to our account .</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="txt_reset">Reset your Password</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm new password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="first">Full name</string>
    <string name="email">Email</string>
    <string name="password2">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="txt">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="reg1">Join</string>
    <string name="reg2">Us</string>
    <string name="get_started">Get Started</string>
    <string name="hi_doctor">Hi Doctor ..</string>
    <string name="medical">Medical specialty</string>
    <string name="address">Clinic address</string>
    <string name="phone">Phone</string>
    <string name="time">Your available time</string>
    <string name="inf">Other information</string>
    <string name="thank_doctor">Thank you for helping us !\nWe hope you will give\ngood advice to patients..</string>
    <string name="give">We give you the best doctors\nand hospitals </string>
    <string name="give2">in the following fields ..</string>
    <string name="best_doctors">"Best doctors "</string>
    <string name="best_hospitals">"Best hospitals "</string>
    <string name="ok">Ok</string>
    <string name="authentication">Authentication</string>
    <string name="about1">We are a team looking for your comfort</string>
    <string name="about2">We care that you save time and money</string>
    <string name="about3">if you want to check on your health.</string>
    <string name="about4">Or talk to a doctor and benefit from his advice</string>
    <string name="about5">We wish you better days</string>
    <string name="Successful_rays">Successful rays !</string>
    <string name="Successful_photos">Successful photos !</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="Eye_city">Eye city</string>
    <string name="albumin" translatable="false">Albumin </string>
    <string name="blood_glucose_random" translatable="false">blood glucose random</string>
    <string name="serum_creatinine" translatable="false">Serum Creatinine</string>
    <string name="white_blood_cell_count" translatable="false">White blood cell count</string>
    <string name="blood_pressure" translatable="false">blood pressure</string>
    <string name="blood_urea" translatable="false">blood urea</string>
    <string name="potassium" translatable="false">Potassium</string>
    <string name="dr_mohamed_el_samlawy">Dr.Mohamed ElSamlawy</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="chat">Chat</string>
    <string name="type_a_message">Type a message ..</string>
    <string name="skin_diseases">Skin diseases</string>
    <string name="you_can_upload_a_picture_of_your_skin_and_we_will_n_tell_you_if_you_suffer_from_one_of_these_diseases">You can upload a picture of your skin and we will\n tell you if you suffer from one of these diseases:</string>
    <string name="actinic_keratosis">Actinic keratosis</string>
    <string name="intraepithelial_carcinoma">Intraepithelial carcinoma</string>
    <string name="basal_cell_carcinoma">Basal-cell carcinoma</string>
    <string name="seborrheic_keratosis">Seborrheic Keratosis</string>
    <string name="dermatofibroma">Dermatofibroma</string>
    <string name="melanoma">Melanoma</string>
    <string name="melanocytic_nevi">Melanocytic nevi</string>
    <string name="Continue">Continue</string>
    <string name="doctor_name">Doctor Name :</string>
    <string name="medical_specialty">Medical Specialty :</string>
    <string name="clinic_address">Clinic Address :</string>
    <string name="phone2">Phone :</string>
    <string name="available_time">Available time :</string>
    <string name="other_inf">Other inf :</string>
    <string name="your_lung_is_healthy">Your lung is healthy</string>
    <string name="please_upload_a_picture_of_the_skin">Please upload a picture of the skin</string>
    <string name="check_now">CHECK NOW</string>
    <string name="dermatology_clinic_in_bakus">Dermatology clinic in Bakus</string>
    <string name="el_raml_alexandria_governorate">El Raml , Alexandria Governorate</string>
    <string name="_4_7" translatable="false">4.7</string>
    <string name="vascuderm_clinic">Vascuderm Clinic</string>
    <string name="ezbet_saad_sidi_gaber_alexandria">Ezbet Saad, Sidi Gaber, Alexandria</string>
    <string name="_4_3" translatable="false">4.3</string>
    <string name="dalia_derma_clinic">Dalia Derma Clinic</string>
    <string name="abou_quer_sidi_gabir_sidi_gaber_alexandria">Abou Quer, Sidi Gabir,  Alexandria</string>
    <string name="_3_7" translatable="false">3.7</string>
    <string name="abbasia_clinic">Abbasia Clinic</string>
    <string name="fakhry_abd_el_nour_al_abbaseyah_al_qebleyah_el_weili_cairo">Fakhry Abd El-Nour, Al Abbaseyah Al Qebleyah, El Weili, Cairo</string>
    <string name="_4_4" translatable="false">4.4</string>
    <string name="salahuddin_dermatology_hospital">Salahuddin Dermatology Hospital</string>
    <string name="_4_kayetbai_street_almazah_heliopolis_cairo">4 Kayetbai, street, Almazah, Heliopolis, Cairo</string>
    <string name="_4_0" translatable="false">4.0</string>
    <string name="dermatology_hospital">Dermatology Hospital</string>
    <string name="qism_damietta_damietta_desert_damietta">Qism Damietta, Damietta Desert, Damietta</string>
    <string name="dr_ghada_abdelhadi">Dr.Ghada AbdelHadi</string>
    <string name="phd_and_consultant_of_dermatology_dermatology_and_laser_therapy">PhD and consultant of dermatology, dermatology and laser therapy ...</string>
    <string name="dr_maher_mahmoud">Dr. Maher Mahmoud</string>
    <string name="consultant_of_dermatology_and_cosmetology_and_consultant_of_genitourinary_diseases">Consultant of dermatology and cosmetology and consultant of genitourinary diseases ...</string>
    <string name="dr_ghada_rabie">Dr. Ghada Rabie</string>
    <string name="dermatology_cosmetology_and_laser_specialist_kasr_al_ainy_cairo_university">Dermatology, Cosmetology and Laser Specialist, Kasr Al-Ainy - Cairo University ...</string>
    <string name="dermatologist_specialized_in_plastic_surgery_burns_plastic_surgery_and_laser_venereal_diseases">Dermatologist specialized in plastic surgery, burns, plastic surgery and laser, venereal diseases ...</string>
    <string name="dr_dalia_mohsen">Dr. Dalia Mohsen</string>
    <string name="consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist">Consultant dermatologist, cosmetic and laser at Cairo University. A dermatologist ...</string>
    <string name="dr_hany_khalil">Dr. Hany Khalil</string>
    <string name="dermatologist_specialized_in_adult_dermatology_cosmetic_and_laser_genital_diseases">Dermatologist specialized in Adult Dermatology, Cosmetic and Laser, Genital Diseases ...</string>
    <string name="dermatologist_specialized_in_adult_dermatology_cosmetic_and_laser_genital_diseases_andrology_pediatric_dermatology_eye_plastic_surgery_and_facial_plastic_surgery">Dermatologist specialized in Adult Dermatology, Cosmetic and Laser, Genital Diseases, Andrology, Pediatric Dermatology, Eye Plastic Surgery and Facial Plastic Surgery</string>
    <string name="_0115_637_0101" translatable="false">0115 637 0101</string>
    <string name="_370_faisal_main_street_tamimi_station_in_front_of_twinki_second_floor_faisal">370 Faisal Main Street, Tamimi station, in front of Twinki, second floor, Faisal</string>
    <string name="_300_egp">300 EGP</string>
    <string name="consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist_specialized_in_adult_dermatology_plastic_surgery_and_laser_and_pediatric_dermatology">Consultant dermatologist, cosmetic and laser at Cairo University. A dermatologist specialized in adult dermatology, plastic surgery and laser and pediatric dermatology .</string>
    <string name="_045_3300820" translatable="false">045 3300820</string>
    <string name="click_on_the_name_of_the_disease_to_know_some_information_about_it">Click on the name of the disease to know some information about it</string>
    <string name="eyes_diseases">Eyes diseases</string>
    <string name="you_can_upload_a_picture_of_your_eyes_and_we_will_n_tell_you_if_you_suffer_from_one_of_these_diseases">You can upload a picture of your eyes and we will\ntell you if you suffer from one of these diseases</string>
    <string name="bulging_eyes">bulging eyes</string>
    <string name="cataract">Cataract</string>
    <string name="crossed_eyes">Crossed eyes</string>
    <string name="uveitis">Uveitis</string>
    <string name="glaucoma">glaucoma</string>
</resources>