<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsPatientActivity">


    <EditText
        android:id="@+id/txt_meical"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/medical"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#ACACAC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button"
        android:text="@string/sub"
        android:textAllCaps="false"
        android:textColor="@color/color3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_other" />

    <EditText
        android:id="@+id/txt_address"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#ACACAC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_meical" />

    <EditText
        android:id="@+id/txt_other"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/inf"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#ACACAC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_time" />

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#ACACAC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_address" />

    <EditText
        android:id="@+id/txt_time"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#ACACAC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/textview"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="290dp"
        android:layout_height="326dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="-30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hi" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/hi_doctor"
        android:textColor="@color/color2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView25" />

</androidx.constraintlayout.widget.ConstraintLayout>